src/objects/SBQQ__PriceSchedule__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceScheduleHelp</customHelpPage>
    <description>Volume Price Schedule that applies automatic discounts based on quantity.</description>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Account that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AggregationScope__c</fullName>
        <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
        <inlineHelpText>Specify how to aggregate quantities of quote lines for products using this schedule. By default quantity of each line (even for the same product) is considered independently.</inlineHelpText>
        <label>Aggregation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConstraintField__c</fullName>
        <description>For cross-order schedules, if you want to limit which subscriptions and assets are used to calculate your volume discounts, select the field that you want to match against the same field on the quote.</description>
        <inlineHelpText>Select the field that you want to match against the same field on the quote.</inlineHelpText>
        <label>Constraint Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CrossOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
        <inlineHelpText>Select the checkbox if you want to extend volume discounts on total volume owned by customer (i.e. quantity quoted plus prior purchases).</inlineHelpText>
        <label>Cross Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CrossProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
        <inlineHelpText>Select the checkbox to aggregate quantities of all products using this schedule for the purpose of volume discount calculation. Slab discounts cannot be used for Cross Product discounts.</inlineHelpText>
        <label>Cross Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this Price Schedule.</description>
        <inlineHelpText>Description for this Price Schedule.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountUnit__c</fullName>
        <description>This is the Discount Unit for the Price Schedule.</description>
        <inlineHelpText>Specify the Discount Unit: Amount or Percent.</inlineHelpText>
        <label>Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                    <default>true</default>
                    <label>Percent</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
        <description>Comma-seperated list of price book IDs for which this Price Schedule should not apply.</description>
        <inlineHelpText>Enter a list of price book IDs separated by commas that should not be applied to this Price Schedule.</inlineHelpText>
        <label>Excluded Pricebook IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeBundledProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</description>
        <inlineHelpText>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</inlineHelpText>
        <label>Include Bundled Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order product that this Price Schedule applies to.</description>
        <inlineHelpText>Order product that this Price Schedule applies to.</inlineHelpText>
        <label>Order Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Order Products of the associated order.</errorMessage>
            <filterItems>
                <field>OrderItem.OrderId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order that this Price Schedule applies to.</description>
        <inlineHelpText>Order that this Price Schedule applies to.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The discount schedule that this price schedule is originated from.</description>
        <inlineHelpText>The discount schedule that this price schedule is originated from.</inlineHelpText>
        <label>Original Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OverrideBehavior__c</fullName>
        <description>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</description>
        <inlineHelpText>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</inlineHelpText>
        <label>Override Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Current Tier Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceScale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Decimal places for prices produced by this Price Schedule.</description>
        <inlineHelpText>Decimal places for prices produced by this Price Schedule.</inlineHelpText>
        <label>Price Scale</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceType__c</fullName>
        <description>The price type that determines how the prices or discounts are calculated.</description>
        <inlineHelpText>The price type that determines how the prices or discounts are calculated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PriceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book that this Price Schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Price book that this Price Schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that this Price Schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Product that this Price Schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineQuantityField__c</fullName>
        <description>Field used to calculate Price Schedule pricing.</description>
        <inlineHelpText>Field used to calculate Price Schedule pricing.</inlineHelpText>
        <label>Quote Line Quantity Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Line that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote Line that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>Term discount in total applied to this price schedule.  The value is available only for Tiered price type.  For Volume price type, the term discount is available for each price tier.</description>
        <inlineHelpText>Term discount in total applied to this price schedule.  The value is available only for Tiered price type.  For Volume price type, the term discount is available for each price tier.</inlineHelpText>
        <label>Term Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UsePriceForAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user defined Price Schedule&apos;s Discount Unit will be set to Price.</description>
        <inlineHelpText>If checked, the user defined Price Schedule&apos;s Discount Unit will be set to Price.</inlineHelpText>
        <label>Use Price For Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this schedule was created by an end user or an admin.</description>
        <inlineHelpText>Identifies whether this schedule was created by an end user or an admin.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Schedule</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SBQQ__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>